# forge

./: .dockerignore  .env.example  .eslintignore  .eslintrc.cjs  .eslintrc.json  .gitignore  .gitmodules  .prettierignore  .replit  AGENTS.md  ARTIFACTS.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Forgefile.yaml  GEMINI.md  LICENSE  Makefile  Makefile.extra.mk  Makefile.proof.mk  PHASE2_SETUP_COMPLETE.md  README.md  SECURITY.md  SMOKE_TEST.md  cloudbuild.yaml  package.json  pnpm-lock.yaml  pyproject.toml  replit-run.sh  replit.md  replit.yaml  tsconfig.json  vitest.config.ts
.devcontainer/: devcontainer.json  post-create.sh
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
.husky/: _precommit_legacy_guard.sh
agent/: execute.ts  plan.ts  schemas.ts
agents/: index.ts  my-assistant.ts  vaultmesh-agent.ts
ai-companion-proxy-starter/: Dockerfile  Makefile  OPERATIONS.md  OPERATOR_CARD.md  README.md  cloudbuild.yaml  package.json
artifacts/: consciousness-integration-summary.md  consciousness-spectrum-analysis.md
cli/: forge-run.ts  forge.ts  incantation-run.ts  index.ts  templateResolver.ts  vm.ts
dispatcher/: ensureConforms.ts  executeTemplate.ts  expander.ts  modelProvider.ts  providerFallback.ts  realityLedger.ts  router.ts  safety.ts  types.ts
docs/: 404.html  ANALYTICS.md  (+51 more)
vaultmesh-ai/vaultmesh-workspace-scaffold/vaultmesh/: Cargo.toml
vaultmesh-ai/vaultmesh-workspace-scaffold/vaultmesh/src/: main.rs
vaultmesh-workspace-scaffold/: .gitignore  CONTRIBUTING.md  Cargo.toml  README.WORKSPACE.md  SECURITY.md
vaultmesh-workspace-scaffold/.github/workflows/: ci.yml
vaultmesh-workspace-scaffold/polis/controller/: Cargo.toml
vaultmesh-workspace-scaffold/polis/controller/src/: main.rs
vaultmesh-workspace-scaffold/vaultmesh/src/: lib.rs
vaultmesh-workspace-scaffold/vaultmesh/tests/: receipts_merkle_smoke.rs
(+488 files in other folders)
