[project]
name = "forge-v2"
version = "0.1.0"
description = "VaultMesh Forge v2 — async ritual orchestrator"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "httpx>=0.27.0",
  "prometheus-client>=0.20.0",
  "sse-starlette>=2.1.0",
  "pyyaml>=6.0.1",
  "blake3>=0.4.1"
]

[project.scripts]
forge-api = "forge_v2.api:main"
forge-run = "forge_v2.orchestrator:cli_run"

[tool.uv]
dev-dependencies = ["pytest>=8.0.0"]
