[workspace]
members = [
  "vaultmesh",
  "polis/controller"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Vault Sovereign <ops@vaultmesh>"]
license = "Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
blake3 = "1"
tokio = { version = "1", features = ["rt-multi-thread","macros"] }
axum = "0.7"
prometheus = "0.13"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt","env-filter"] }
